--- a/deploy.yaml
+++ b/deploy.yaml
@@ -18,6 +18,10 @@ spec:
         env:
         - name: SPRING_PROFILES_ACTIVE
           value: production-microservice
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 80
 ---
 apiVersion: v1
 kind: Service
