--- a/deploy.yaml
+++ b/deploy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: webapp
-        image: ${REPOSITORY_TAG}
+        image: 788000630483.dkr.ecr.us-east-1.amazonaws.com/fleetman-webapp:0
         env:
         - name: SPRING_PROFILES_ACTIVE
           value: production-microservice
