--- a/manifests/ingress/ingress-webapp.yaml
+++ b/manifests/ingress/ingress-webapp.yaml
@@ -2,7 +2,6 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: mainlb
-  namespace: webapp
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
@@ -11,7 +10,7 @@ metadata:
 spec:
   ingressClassName: alb
   rules:
-    - host: deepaktyagi.tech
+    - host: fleetman.deepaktyagi.tech
       http:
         paths:
           - path: /
