--- a/manifests/ingress/ingress-grafana.yaml
+++ b/manifests/ingress/ingress-grafana.yaml
@@ -5,20 +5,10 @@ metadata:
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}], '[{"HTTP": 9090}]'
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
 spec:
   ingressClassName: alb
   rules:
-    - host: prom.deepaktyagi.tech
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: stable-kube-prometheus-sta-prometheus
-                port:
-                  number: 9090
     - host: grafana.deepaktyagi.tech
       http:
         paths:
