--- a/manifests/ingress/ingress-grafana.yaml
+++ b/manifests/ingress/ingress-grafana.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: prom-grafana
+  name: ingress-grafana
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
