--- a/manifests/ingress/ingress-grafana.yaml
+++ b/manifests/ingress/ingress-grafana.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: prom-grafana
+  namespace: monitoring
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
@@ -16,6 +17,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: stable-grafana
+                name: monitoring-grafana
                 port:
                   number: 80
